# cle-tools

./: CLETools.py  LICENSE.md  Makefile  README.md  __init__.py  archive.sh  cle_tools.pro  cle_tools.py  constants.py  metadata.txt  pb_tool.cfg  plugin_upload.py  pyproject.toml  resources.py  resources.qrc  setup_workers.py  tb_aggiorna_progetto.py  tb_esporta_shp.py  tb_esporta_shp.ui  tb_generate_reports.py  tb_generate_reports.ui  tb_importa_shp.ui  tb_info.py  tb_info.ui  tb_nuovo_progetto.py  tb_nuovo_progetto.ui  tb_report_cle.py  tb_report_cle.ui  tb_valida.py  tb_valida.ui  tb_wait.py  utils.py
data/progetto_CLE/: progetto_CLE.qgs
data/progetto_CLE/progetto/maschere/: freq.ui
data/progetto_CLE/progetto/script/: cle_cl_ac.py  cle_cl_ae.py  cle_cl_as.py  cle_cl_es.py  cle_cl_us.py  elem_isob_form.py  siti_ind_param.py
help/source/: conf.py  index.rst  intro.rst  plugin.rst
help/source/plugin/: editing.rst  esportazione.rst  installazione.rst  nuovo_progetto.rst  report.rst  strumenti.rst
i18n/: CLETools_it.qm  CLETools_it.ts
scripts/: archive.sh  trans_compile.sh  trans_update.sh  update_project_template.sh
template_code/: progetto_CLE.qgs
template_code/progetto/maschere/: cle_ac.ui  cle_ae.ui  cle_as.ui  cle_es.ui  cle_us.ui  no_edit.ui
template_code/progetto/script/: cle_cl_ac.py  cle_cl_ae.py  cle_cl_as.py  cle_cl_es.py  cle_cl_us.py
workers/: export_worker.py  import_worker.py  report_worker.py
workers/report_templates/: aggregati_tmpl.html  aree_emerg_tmpl.html  edifici_tmpl.html  infrastrutture_tmpl.html  unita_strutt_tmpl.html
