[tool.poetry]
name = "cle-tools"
version = "0.5"
description = "QGIS plugin for Italian Emergency Limit Condition analysis."
authors = ["CNR IGAG LabGIS <labgis@igag.cnr.it>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pb_tool = "^3.1.0"
flake8 = "^3.9.2"
black = "^24.3"
sphinx-rtd-theme = "^0.5.2"
rstcheck = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
